--- a/source/css/style.css
+++ b/source/css/style.css
@@ -5,19 +5,24 @@
     
 }
 
-.main-container{
+:root{
+    --main-gradient: linear-gradient(to left top, #7000ff, #0051ff, #006eff, #0081ed, #008fd4, #3889c0, #4c83ad, #5a7d9a, #516887, #495372, #413e5d, #382b47);
+    --main-font: 'Inter', sans-serif;
+    --second-font: 'Roboto', sans-serif;
+}
 
-    
+.main-container{
+    background-image: var(--main-gradient);
+    color: #ffff
+
 }
 
 .cabecalho{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: url(../img/wave2.svg);
-    background-repeat: repeat-x;
     width: 100%;
-
+    font-family: var(--main-font);
 }
 
 .media-links{
@@ -58,7 +63,34 @@
 .apresentation-home-page{
     width: 100%;
     height: 100vh;
-   
+    font-family: var(--second-font);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.apresentation-image-content{
+    width: 50vw;
+    height: 50vh;
+    
+}
+
+.apresentation-image-content img{
+    width: 100%;
+    height: 100%;
+}
+
+.title-apresentation{
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% 
+}
+
+.apresentation-text{
+    color:#00A872;
+    font-family: var(--second-font);
+    font-weight: 300;
 }
 
 .projects{
@@ -72,6 +104,14 @@
     display: block;
     padding: 30px;
     text-align: center;
+    font-family: var(--main-font);
+}
+
+.text-inside{
+    display: block;
+    text-align: center;
+    padding: 15px;
+    font-family: var(--second-font);
 }
 
 
@@ -88,16 +128,40 @@
 .project-card{
     height: 50vh;
     width: 20%;
-    background-color: blue;
+    background-image: url(../img/background-card.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
     color: white;
     padding: 30px;
-    border-radius: 15px;
+    border-radius: 20px;
+    font-family: var(--second-font);
+    text-align: center;
+    
 }
 
 .about{
     width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
     
+}
+
+.about-content{
+    
+}
+
+.about-image-content{
+    width: 30vw;
+    height: 30vh;
+}
+
+.about-image-content img{
+    width: 100%;
+    height: 100%;
 }
 
 .contact{
